# CPP_Fraction

./: CMakeLists.txt  Demo.cpp  StudentTest2.cpp  Test.cpp  demo  test  test1  test2
objects/: empty.cpp
sources/: Fraction.cpp  Fraction.hpp
