cmake_minimum_required(VERSION 3.25)
project(CPP_Fraction)

set(CMAKE_CXX_STANDARD 17)

add_executable(CPP_Fraction sources/Fraction.hpp objects/empty.cpp Demo.cpp doctest.h Test.cpp TestCounter.cpp sources/Fraction.hpp sources/Fraction.cpp sources/Fraction.hpp sources/Fraction.hpp TestRunner.cpp StudentTest2.cpp StudentTest1.cpp StudentTest2.cpp)
